--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -16,3 +16,8 @@ li {
     justify-content: space-between;
     align-items: center;
 }
+
+.taskDetailsItem {
+    font-size: 0.9rem;
+    color: gray;
+}
